# Makefile

./: .gitignore  Makefile  README.md  main.cpp
Assignment_1/: CMakeLists.txt  CMakePresets.json  debug.sh  release.sh
Assignment_1/include/: ArrayManager.h  DynamicArray.h  Utils.h
Assignment_1/source/: ArrayManager.cpp  DynamicArray.cpp  Utils.cpp  main.cpp
Assignment_2/Ex1/: ex1  ex1.c  main.cpp
Assignment_2/Ex2/: ex2  main.c  run.sh
Assignment_2/Ex3/: main.c  run.sh
Assignment_3/Ex1/: main.c
Demo/Libs/: Makefile
Demo/Libs/sources/: calculate.cpp  display.cpp
Demo/Test/: Makefile
Demo/Test/includes/: calculate.h  display.h
Libs/: Makefile
Makefile/Libs/: Makefile
Makefile/Test/: Makefile
MathLib/: Makefile
MathLib/include/: math_ultis.h
MathLib/source/: math_ultis.cpp
MathLib/test/: Makefile  main.cpp
MathLib/test/include/: test.h
MathLib/test/source/: main.cpp  test.cpp
Test/: Makefile
Test/sources/: main.cpp
TestLib/: Makefile  all.mk
TestLib/include/: libmath.h  libstring.h  mathlib.h  stringlib.h
TestLib/source/: libmath.cpp  libstring.cpp  mathlib.cpp  stringlib.cpp
TestLib/test/: Makefile
TestLib/test/include/: test.h
TestLib/test/source/: main.cpp  test.cpp
